<resources>

    <string name="app_name">Amachay</string>

    <string name="title_sintomas">SÍNTOMAS</string>
    <string name="title_consejos">CONSEJOS</string>
    <string name="title_novedades">NOVEDADES</string>
    <string name="numero_infectados">5897</string>
    <string name="numero_dadosalta">5897</string>
    <string name="infectados">INFECTADOS</string>
    <string name="dado_alta">DADOS DE ALTA</string>
    <string name="numero_hospitalizados">5897</string>
    <string name="numero_fallecidos">5897</string>
    <string name="hospitalizados">HOSPITALIZADOS</string>
    <string name="fallecidos">FALLECIDOS</string>
    <string name="revisar_ruta">REVISAR RUTA</string>
    <string name="mapa">MAPA</string>
    <string name="emergencia">EMERGENCIAS</string>
    <string name="triaje">TRIAJE</string>
    <string name="covidPERU">COIVD-19 PERÚ</string>
    <string name="covidGLOBAL">COVID-19 GLOBAL</string>
    <string name="consejos">CONSEJOS</string>
    <string name="sintomas">SÍNTOMAS</string>
    <string name="novedades">NOVEDADES</string>
    <string name="perfil">PERFIL</string>
    <string name="nombre">NOMBRE</string>
    <string name="valor_nombre">Andres...</string>
    <string name="apellido">APELLIDO}</string>
    <string name="valor_apellido">Aguilar</string>
    <string name="correo">CORREO</string>
    <string name="valor_correo">l....eo-199...@....com</string>
    //PARTE SINTOMAS
    <string name="dolor_de_garganta">Dolor de Garganta</string>
    <string name="falta_de_oxigeno">Falta de oxigeno</string>
    <string name="diagn_stico">Diagnóstico</string>
    <string name="ojos_irritados">Ojos irritados</string>
    <string name="dificultad_para_respirar">Dificultad para respirar</string>
    <string name="fiebre_">Fiebre</string>
    <string name="fatiga">Fatiga</string>
    <string name="tos_">Tos</string>
    <string name="debilidad">Debilidad</string>
    <string name="estornudos">Estornudos</string>
    <string name="congesti_n_nasal">Congestión nasal</string>
    //PARTE NOVEDADES
    <string name="nov_titulo">Titulo</string>
    <string name="nov_fecha">Fecha</string>
    <string name="nov_descripcion">Descripcion</string>
    <string name="nov_contenido">Contenido</string>
    <string name="menu_nacional">Perú</string>
    <string name="menu_fotos">Fotos</string>
    <string name="menu_global">Global</string>
    <string name="tituloNoticiasNacionales">NOTICIAS NACIONALES</string>
    <string name="tituloNoticiasGlobales">NOTICIAS GLOBALES</string>
    //PARTE NUMEROS EMERGENCIA
    <string name="Covid">Teleconsultas por Covid\n113</string>
    <string name="SAMU">SAMU\n106</string>
    <string name="PNP">PNP\n105</string>
    <string name="EsSalud">EsSaludo\n106</string>
    <string name="Bomberos">Bomberos\n116</string>
    <string name="Tittle">NÚMEROS DE EMERGENCIA</string>
    <string name="mainTitle">SI NO RESPONDE EL 113</string>
    <string name="title1">Lima Norte</string>
    <string name="number1">945 256 004\n956 257 753</string>
    <string name="schedule1">L-V de 8am-4pm</string>
    <string name="title2">Lima Centro</string>
    <string name="number2">943 970 913\n943 970 644</string>
    <string name="title3">Lima Este</string>
    <string name="number3">362 8602\n362 7088\n362 8062</string>
    <string name="title4">Callao</string>
    <string name="number4">01 429 8128\n01 429 8174</string>
</resources>
