<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.menu_principal"
    android:background="@drawable/fondo_dia">

    <TextView
        android:id="@+id/cuadro_boton_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil"
        android:textColor="@color/color_fondoMenuPrincipal_dia"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.060"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/cuadro_botonBarra_consejos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_consejos"
        android:textColor="@color/color_fondoMenuPrincipal_dia"
        android:textSize="13dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

    <TextView
        android:id="@+id/cuadro_botonBarra_sintomas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_sintomas"
        android:textColor="@color/color_fondoMenuPrincipal_dia"
        android:textSize="13dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

    <TextView
        android:id="@+id/cuadro_botonBarra_novedades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_novedades"
        android:textColor="@color/color_fondoMenuPrincipal_dia"
        android:textSize="13dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

    <ImageButton
        android:id="@+id/boton_barra_novedades"
        android:layout_width="149dp"
        android:layout_height="93dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/novedadesdia" />

    <ImageButton
        android:id="@+id/boton_barra_sintomas"
        android:layout_width="117dp"
        android:layout_height="137dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993"
        app:srcCompat="@drawable/tos"
        android:background="@android:color/transparent"
        />

    <ImageButton
        android:id="@+id/boton_barra_consejos"
        android:layout_width="147dp"
        android:layout_height="91dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993"
        app:srcCompat="@drawable/info" />

    <TextView
        android:id="@+id/cuadro_infectados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infectados"
        android:textColor="@color/color_fondoMenuPrincipal_noche"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <TextView
        android:id="@+id/cuadro_fallecido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fallecidos"
        android:textColor="@color/color_fondoMenuPrincipal_noche"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393" />

    <TextView
        android:id="@+id/cuadro_hopitalizados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hospitalizados"
        android:textColor="@color/color_fondoMenuPrincipal_noche"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393" />

    <TextView
        android:id="@+id/cuadro_de_alta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dado_alta"
        android:textColor="@color/color_fondoMenuPrincipal_noche"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.758"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <TextView
        android:id="@+id/cuadro_numero_dadoalta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_dadosalta"
        android:textColor="@color/color_NumeroDadosAlta_noche"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.743"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/cuadro_numero_fallecido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_fallecidos"
        android:textColor="@color/color_NumeroFallecidos"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <TextView
        android:id="@+id/cuadro_numero_infectados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_infectados"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/color_NumeroInfectados_dia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/cuadro_numero_hospitalizados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_hospitalizados"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/color_NumeroHospitalizados"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <TextView
        android:id="@+id/cuadro_botonCovidGLOBAL"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="@string/covidGLOBAL"
        android:textColor="@color/color_fondoMenuPrincipal_noche"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824" />

    <TextView
        android:id="@+id/cuadro_botonCovidPERU"
        android:layout_width="73dp"
        android:layout_height="41dp"
        android:gravity="center"
        android:text="@string/covidPERU"
        android:textColor="@color/color_fondoMenuPrincipal_noche"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824" />

    <TextView
        android:id="@+id/cuadro_botonTriaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/triaje"
        android:textColor="@color/color_fondoMenuPrincipal_noche"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619" />

    <TextView
        android:id="@+id/cuadro_botonEmergencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emergencia"
        android:textStyle="bold"
        android:textSize="16dp"
        android:textColor="@color/color_fondoMenuPrincipal_noche"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619" />

    <TextView
        android:id="@+id/cuadro_botonMapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapa"
        android:textColor="@color/color_fondoMenuPrincipal_noche"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619" />

    <ImageButton
        android:id="@+id/botonTriaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color_fondoMenuPrincipal_dia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        app:srcCompat="@drawable/triajedia" />

    <ImageButton
        android:id="@+id/botonMapa"
        android:layout_width="92dp"
        android:layout_height="91dp"
        android:background="@color/color_fondoMenuPrincipal_dia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546"
        app:srcCompat="@drawable/mapadia" />

    <ImageButton
        android:id="@+id/botonEmergencia"
        android:layout_width="87dp"
        android:layout_height="81dp"
        android:background="@color/color_fondoMenuPrincipal_dia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538"
        app:srcCompat="@drawable/telefonoemergencia" />

    <ImageButton
        android:id="@+id/botonCovidPERU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color_fondoMenuPrincipal_dia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.331"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742"
        app:srcCompat="@drawable/covidperudia" />

    <ImageButton
        android:id="@+id/botonCoivdMUNDO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color_fondoMenuPrincipal_dia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.708"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742"
        app:srcCompat="@drawable/covidglobaldia" />

    <ImageButton
        android:id="@+id/boton_perfil"
        android:layout_width="70dp"
        android:layout_height="64dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/profiledia" />


</androidx.constraintlayout.widget.ConstraintLayout>