<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.Novedades.PostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/colorNoticias1">
            <com.codesgood.views.JustifiedTextView
                android:id="@+id/tituloNoticia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nov_titulo"
                android:textSize="25sp"
                android:fontFamily="@font/adamina"
                android:textColor="@color/colorPrimary"
                android:padding="5dp"
                android:gravity="start"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            app:cardCornerRadius="12dp"
            app:cardBackgroundColor="@color/colorDia2">

            <ImageView
                android:id="@+id/imagenNoticia"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/colorNoticias3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <com.codesgood.views.JustifiedTextView
                    android:id="@+id/descripcionNoticia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nov_descripcion"
                    android:textSize="12sp"
                    android:fontFamily="@font/aldrich"
                    android:textColor="@color/colorPrimary"
                    android:gravity="start"/>
                <TextView
                    android:id="@+id/fechaNoticia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/nov_fecha"
                    android:fontFamily="@font/aldrich"
                    android:textColor="@color/colorTextoNoticias2"
                    android:textSize="10sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/colorNoticias4">

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/contenidoNoticia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nov_contenido"
                android:textSize="15sp"
                android:fontFamily="@font/slippery"
                android:textColor="@color/colorPrimary"
                android:padding="5dp"
                android:lineSpacingExtra="5dp"
                android:gravity="start"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>